--- a/src/Lonos.Lib/Lonos.Lib.csproj
+++ b/src/Lonos.Lib/Lonos.Lib.csproj
@@ -67,7 +67,9 @@
     <Compile Include="Assert.cs" />
     <Compile Include="BitConversion.cs" />
     <Compile Include="KMath.cs" />
+    <Compile Include="MessageManager.cs" />
     <Compile Include="Serial.cs" />
+    <Compile Include="SysCalls.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
