--- a/src/Lonos.Kernel.Core/Lonos.Kernel.Core.csproj
+++ b/src/Lonos.Kernel.Core/Lonos.Kernel.Core.csproj
@@ -42,14 +42,16 @@
     <Compile Include="Interrupts\IDTStack.cs" />
     <Compile Include="Interrupts\IDTTaskStack.cs" />
     <Compile Include="Interrupts\InterruptControlBlock.cs" />
-    <Compile Include="MemoryManagement\BasePageFrameAllocator.cs" />
-    <Compile Include="MemoryManagement\BuddyAllocatorImplementation.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\BasePageFrameAllocator.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\BuddyAllocatorImplementation.cs" />
     <Compile Include="MemoryManagement\KernelAllocator.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\MultiAllocator.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\SimplePageAllocator.cs" />
     <Compile Include="MemoryManagement\PageTableExtensions.cs" />
     <Compile Include="Collections\FifoQueue.cs" />
     <Compile Include="MemoryManagement\PhysicalPageManager.cs" />
-    <Compile Include="MemoryManagement\VirtualPageAllocator.cs" />
-    <Compile Include="MemoryManagement\PhysicalPageAllocator.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\VirtualPageAllocator.cs" />
+    <Compile Include="MemoryManagement\PageAllocators\PhysicalPageAllocator.cs" />
     <Compile Include="Processes\Process.cs" />
     <Compile Include="Processes\ProcessCreateOptions.cs" />
     <Compile Include="Processes\ProcessManager.cs" />
@@ -83,7 +85,7 @@
     <Compile Include="Boot\BootInfo.cs" />
     <Compile Include="MemoryManagement\KernelMemoryMap.cs" />
     <Compile Include="Tests\buddy-malloc.cs" />
-    <Compile Include="MemoryManagement\RawVirtualFrameAllocator.cs" />
+    <Compile Include="MemoryManagement\VirtualPageManager.cs" />
     <Compile Include="Collections\KList.cs" />
   </ItemGroup>
   <ItemGroup>
