--- a/src/Lonos.Kernel.Core/Lonos.Kernel.Core.csproj
+++ b/src/Lonos.Kernel.Core/Lonos.Kernel.Core.csproj
@@ -43,9 +43,10 @@
     <Compile Include="Interrupts\IDTTaskStack.cs" />
     <Compile Include="Interrupts\InterruptControlBlock.cs" />
     <Compile Include="MemoryManagement\KernelAllocator.cs" />
-    <Compile Include="MemoryManagement\PageFrameManager.cs" />
+    <Compile Include="MemoryManagement\PhysicalPageManager.cs" />
     <Compile Include="MemoryManagement\PageTableExtensions.cs" />
     <Compile Include="Collections\FifoQueue.cs" />
+    <Compile Include="MemoryManagement\VirtualPageManager.cs" />
     <Compile Include="Processes\Process.cs" />
     <Compile Include="Processes\ProcessCreateOptions.cs" />
     <Compile Include="Processes\ProcessManager.cs" />
@@ -80,7 +81,6 @@
     <Compile Include="MemoryManagement\PageFrameAllocator.cs" />
     <Compile Include="MemoryManagement\KernelMemoryMap.cs" />
     <Compile Include="Tests\buddy-malloc.cs" />
-    <Compile Include="MemoryManagement\RawVirtualFrameAllocator.cs" />
     <Compile Include="Collections\KList.cs" />
   </ItemGroup>
   <ItemGroup>
